--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "pagespeedfr/module-cmsacf",
-    "description": "CmsAcf",
+    "name": "pagespeedfr/cmsacf",
+    "description": "ACF - Advanced Custom Fields - Magento 2 Hyva Admin Form",
     "type": "magento2-module",
     "license": "GPL-3.0",
     "authors": [
         {
-            "name": "Mage2Gen",
-            "email": "info@mage2gen.com"
+            "name": "thibault",
+            "email": "thibault.lhotellier@gmail.com"
         }
     ],
     "minimum-stability": "dev",
